--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,10 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/robots.txt",
+              "src/sitemap.xml",
+              "src/.htaccess"
             ],
             "styles": [
               "src/styles.scss"
